<resources>
    <string name="app_name">NFL Box Score Recap: 2022</string>
    <string name="arizona_cardinals">ARIZONA CARDINALS</string>
    <string name="week_1">Week 1</string>
    <string name="atlanta_falcons">ATLANTA FALCONS</string>
    <string name="baltimore_ravens">BALTIMORE RAVENS</string>
    <string name="buffalo_bills">BUFFALO BILLS</string>
    <string name="carolina_panthers">CAROLINA PANTHERS</string>
    <string name="chicago_bears">CHICAGO BEARS</string>
    <string name="cincinnati_bengals">CINCINNATI BENGALS</string>
    <string name="cleveland_browns">CLEVELAND BROWNS</string>
    <string name="dallas_cowboys">DALLAS COWBOYS</string>
    <string name="denver_broncos">DENVER BRONCOS</string>
    <string name="detroit_lions">DETROIT LIONS</string>
    <string name="green_bay_packers">GREEN BAY PACKERS</string>
    <string name="houston_texans">HOUSTON TEXANS</string>
    <string name="indianapolis_colts">INDIANAPOLIS COLTS</string>
    <string name="jacksonville_jaguars">JACKSONVILLE JAGUARS</string>
    <string name="kansas_city_chiefs">KANSAS CITY CHIEFS</string>
    <string name="las_vegas_raiders">LAS VEGAS RAIDERS</string>
    <string name="los_angeles_chargers">LOS ANGELES CHARGERS</string>
    <string name="los_angeles_rams">LOS ANGELES RAMS</string>
    <string name="miami_dolphins">MIAMI DOLPHINS</string>
    <string name="minnesota_vikings">MINNESOTA VIKINGS</string>
    <string name="new_england_patriots">NEW ENGLAND PATRIOTS</string>
    <string name="new_orleans_saints">NEW ORLEANS SAINTS</string>
    <string name="new_york_giants">NEW YORK GIANTS</string>
    <string name="new_york_jets">NEW YORK JETS</string>
    <string name="philadelphia_eagles">PHILADELPHIA EAGLES</string>
    <string name="pittsburgh_steelers">PITTSBURGH STEELERS</string>
    <string name="san_francisco_49ers">SAN FRANCISCO 49ERS</string>
    <string name="seattle_seahawks">SEATTLE SEAHAWKS</string>
    <string name="tampa_bay_buccaneers">TAMPA BAY BUCCANEERS</string>
    <string name="tennessee_titans">TENNESSEE TITANS</string>
    <string name="washington_commanders">WASHINGTON COMMANDERS</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="week_4">Week 4</string>
    <string name="week_5">Week 5</string>
    <string name="week_6">Week 6</string>
    <string name="week_7">Week 7</string>
    <string name="week_8">Week 8</string>
    <string name="week_9">Week 9</string>
    <string name="week_10">Week 10</string>
    <string name="week_11">Week 11</string>
    <string name="week_12">Week 12</string>
    <string name="week_13">Week 13</string>
    <string name="week_14">Week 14</string>
    <string name="week_15">Week 15</string>
    <string name="week_16">Week 16</string>
    <string name="week_17">Week 17</string>
    <string name="week_18">Week 18</string>
</resources>